Grouped Web3 pages into a single page + Added sidebar to Web3 page for navigation + Renamed claim page to shop + fixed bug where collapsed navbar would be pushed

--- a/components/Navbar/navbar.module.scss
+++ b/components/Navbar/navbar.module.scss
@@ -101,6 +101,10 @@
   @media screen and (max-width: $lg) {
     background-size: $backgroundSizeMobile;
   }
+
+  @media screen and (max-width: $sm) {
+    width: calc(100vw);
+  }
 }
 
 .mobileLink {
