--- a/pages/chart/chart.module.scss
+++ b/pages/chart/chart.module.scss
@@ -10,14 +10,14 @@
   min-height: 100%;
   width: 100%;
   padding-block: 40px;
-  padding-inline: 100px;
+  padding-inline: 20px;
   z-index: inherit;
 
   @media screen and (max-width: $lg) {
     flex-direction: column;
     align-items: center;
     padding-block: 20px;
-    padding-inline: 10px;
+    padding-inline: 15px;
   }
 }
 
@@ -27,8 +27,8 @@
   justify-content: flex-start;
   gap: 20px;
   height: 100%;
-  min-width: 550px;
-  width: 65%;
+  min-width: 250px;
+  width: 60%;
 
   @media screen and (max-width: $lg) {
     gap: 10px;
@@ -43,7 +43,7 @@
   flex-direction: column;
   min-height: 450px;
   height: 55%;
-  min-width: 350px;
+  min-width: 250px;
   width: 22%;
   padding-inline: 20px;
   border: 1px solid $chartBorder;
