--- a/pages/shop/shop.module.scss
+++ b/pages/shop/shop.module.scss
@@ -6,12 +6,14 @@
   align-items: center;
   height: 100%;
   width: 100%;
+  z-index: inherit;
 }
 
-.claimButton {
+.shopButton {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100%;
   width: 100%;
+  z-index: inherit;
 }
